syntax = "proto3";

option csharp_namespace = "CarRentalData";

package proto;

message UserProtoObj
{
  string firstName=1;
  string lastName=2;
  string email=3;
  string password=4;
  int64 cprNumber=5;
  int64 phoneNumber=6;
  bool isAdmin=7;
}

service UserProtoService
{
  rpc CreateUser(UserProtoObj) returns (UserProtoObj){}
}

message UserListResponse
{
  repeated UserProtoObj allUsers=1;
}